--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
+* {box-sizing: border-box;}
+
 header {
-	background-color: blue;
+	width: 100vw;
+	height: 100vh;
+	background-color: red;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+ul {
+	display: flex;
+	padding: 0;
+
+
+}
+li {
+	list-style: none;
+	flex: 1;
+	text-align: center;
+
 }
