--- a/style.css
+++ b/style.css
@@ -38,14 +38,22 @@ header {
 
 header h1 {
 	font-family: 'Shrikhand', cursive;
-	line-height: .7;
+	line-height: 1.3;
 	font-size: 800%;
 	text-align: center;
 	padding: 0 10%;
+	background-color: black;
+    color: #fff; 
+    margin-bottom: 0;
 }
 header p {
 	font-family: 'Shrikhand', cursive;
 	font-size: 200%;
+	background-color: black;
+    color: #fff; 
+    line-height: 1.3;
+    padding: 0 10% 20px;
+    margin-top: 0;
 }
 
 /***************************************
