--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ header p {
 	background-color: black;
     color: #fff; 
     line-height: 1.3;
-    padding: 0 10% 20px;
+    padding: 0 10% 10px;
     margin-top: 0;
 }
 
@@ -80,6 +80,10 @@ nav ul li:hover {
 
 .wrapper {
 	margin: 0 5%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-content: center;
 }
 
 
@@ -89,14 +93,15 @@ PRODUCTS / SAUSAGES
 .products {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: flex-end;
+	
 
 	flex-direction: column;
-
+	
 }
 
 .sausage {
 	display: flex;
+	
 
 }
 
@@ -109,7 +114,8 @@ PRODUCTS / SAUSAGES
 	overflow: hidden;
 	border-radius: 100%;
 	margin: 20px;
-	border: solid 13px black;
+	box-shadow: 0px 2px 20px;
+	border: solid .5px white;
 }
 
 .imgcrp img {
@@ -169,7 +175,28 @@ footer {
 
 
 
+/*********************************
+Media queries
+**********************************/
+@media screen and (min-width: 600px) {
+ 
+ footer {
+ 	background-color: green;
+ }
 
+}
+
+/*@media screen and (min-width: 900px) {
+
+}*/
+
+/*@media screen and (min-width: 1200px) {
+
+}*/
+
+/*@media screen and (min-width: 1800px) {
+
+}*/
 
 
 
