added meta tag in HTML, restart CSS

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ GENERAL
 * {
 	box-sizing: border-box;
 	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
 }
 
 
@@ -36,30 +37,34 @@ header {
     background-size: cover;
 }
 
-header h1 {
+header .hdrtxt h1 {
 	font-family: 'Shrikhand', cursive;
 	line-height: 1.3;
 	font-size: 800%;
 	text-align: center;
 	padding: 0 10%;
-	background-color: black;
     color: #fff; 
     margin-bottom: 0;
+    background-color: #111;
 }
-header p {
+header .hdrtxt p {
 	font-family: 'Shrikhand', cursive;
-	font-size: 200%;
-	background-color: black;
+	font-size: 300%;
     color: #fff; 
     line-height: 1.3;
     padding: 0 10% 10px;
-    margin-top: 0;
+    margin-top: 15px;
+    text-align: center;
+    background-color: #111;
+
 }
+
+
 
 /***************************************
 NAV BAR
 ****************************************/
-ul {
+/*ul {
 	display: flex;
 	padding: 0;
 	margin-top: 0;
@@ -76,7 +81,7 @@ li {
 
 nav ul li:hover {
 	background-color: red;
-}
+}*/
 
 .wrapper {
 	margin: 0 5%;
@@ -90,7 +95,7 @@ nav ul li:hover {
 /***************************************
 PRODUCTS / SAUSAGES
 ****************************************/
-.products {
+/*.products {
 	display: flex;
 	flex-wrap: wrap;
 	
@@ -102,11 +107,11 @@ PRODUCTS / SAUSAGES
 .sausage {
 	display: flex;
 
-}
+}*/
 
 
 /****** ROUNDING PRODUCT IMAGES ******/
-.imgcrp {
+/*.imgcrp {
 	width: 200px;
 	height: 200px;
 	position: relative;
@@ -127,12 +132,12 @@ PRODUCTS / SAUSAGES
 .txt {
 	margin-top: 20px;
 	width: 50%;
-}
+}*/
 
 /***************************************
 CONTACT SECTION
 ****************************************/
-.location {
+/*.location {
 	display: flex;
 }
 
@@ -146,13 +151,13 @@ CONTACT SECTION
 .shops {
 	flex: 2;
 	margin: 15px 25px;
-}
+}*/
 
 
 /***************************************
 FOOTER
 ****************************************/
-footer {
+/*footer {
 	display: flex;
 	justify-content: space-around;
 	border-top: solid black 3px;
@@ -165,7 +170,7 @@ footer {
 
 .contact p {
 	margin: 16px 10px;
-}
+}*/
 
 
 
@@ -173,13 +178,9 @@ footer {
 /*********************************
 Media queries
 **********************************/
-@media screen and (min-width: 600px) {
- 
- footer {
- 	background-color: green;
- }
+/*@media screen and (min-width: 600px) {
 
-}
+}*/
 
 /*@media screen and (min-width: 900px) {
 
