added comments and padding

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ header {
 header .hdrtxt h1 {
 	font-family: 'Shrikhand', cursive;
 	line-height: 1.3;
-	font-size: 800%;
+	font-size: 300%;
 	text-align: center;
 	padding: 0 10%;
     color: #fff; 
@@ -49,7 +49,7 @@ header .hdrtxt h1 {
 }
 header .hdrtxt p {
 	font-family: 'Shrikhand', cursive;
-	font-size: 300%;
+	/*font-size: 300%;*/
     color: #fff; 
     line-height: 1.3;
     padding: 0 10% 10px;
@@ -64,7 +64,7 @@ header .hdrtxt p {
 /***************************************
 NAV BAR
 ****************************************/
-/*ul {
+ul {
 	display: flex;
 	padding: 0;
 	margin-top: 0;
@@ -81,24 +81,26 @@ li {
 
 nav ul li:hover {
 	background-color: red;
-}*/
+}
 
 .wrapper {
-	margin: 0 5%;
+	padding: 0 5%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-content: center;
+	width: 100vw;
+
 }
 
 
 /***************************************
 PRODUCTS / SAUSAGES
 ****************************************/
-/*.products {
+.products {
 	display: flex;
 	flex-wrap: wrap;
-	
+	width: 100vw;
 
 	flex-direction: column;
 	
@@ -106,12 +108,14 @@ PRODUCTS / SAUSAGES
 
 .sausage {
 	display: flex;
-
-}*/
+	flex-direction: column;
+	justify-content: center;
+	/*margin: auto;*/
+}
 
 
 /****** ROUNDING PRODUCT IMAGES ******/
-/*.imgcrp {
+.imgcrp {
 	width: 200px;
 	height: 200px;
 	position: relative;
@@ -120,6 +124,7 @@ PRODUCTS / SAUSAGES
 	margin: 20px;
 	box-shadow: 0px 2px 20px;
 	border: solid .5px white;
+	box-sizing: border-box;
 }
 
 .imgcrp img {
@@ -132,7 +137,7 @@ PRODUCTS / SAUSAGES
 .txt {
 	margin-top: 20px;
 	width: 50%;
-}*/
+}
 
 /***************************************
 CONTACT SECTION
@@ -178,9 +183,11 @@ FOOTER
 /*********************************
 Media queries
 **********************************/
-/*@media screen and (min-width: 600px) {
-
-}*/
+@media screen and (min-width: 600px) {
+.wrapper {
+	background-color: red;
+}
+}
 
 /*@media screen and (min-width: 900px) {
 
