--- a/style.css
+++ b/style.css
@@ -83,6 +83,8 @@ nav ul li:hover {
 	background-color: red;
 }
 
+
+
 .wrapper {
 	padding: 0 5%;
 	display: flex;
@@ -100,17 +102,12 @@ PRODUCTS / SAUSAGES
 .products {
 	display: flex;
 	flex-wrap: wrap;
-	width: 100vw;
-
-	flex-direction: column;
-	
+	flex-direction: column;	
 }
 
 .sausage {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	/*margin: auto;*/
 }
 
 
@@ -118,13 +115,15 @@ PRODUCTS / SAUSAGES
 .imgcrp {
 	width: 200px;
 	height: 200px;
-	position: relative;
+	
+
 	overflow: hidden;
 	border-radius: 100%;
 	margin: 20px;
 	box-shadow: 0px 2px 20px;
-	border: solid .5px white;
+	/*border: solid .5px white;*/
 	box-sizing: border-box;
+	align-self: center;
 }
 
 .imgcrp img {
@@ -136,46 +135,54 @@ PRODUCTS / SAUSAGES
 
 .txt {
 	margin-top: 20px;
-	width: 50%;
+	width: 90%;
+	align-self: center;
+}
+
+.txt h3 {
+	text-align: center;
+	margin-top: 0;
 }
 
 /***************************************
 CONTACT SECTION
 ****************************************/
-/*.location {
+.location {
 	display: flex;
+	flex-direction: column;
 }
 
-.map {
+#map {
 	display: flex;
 	flex: 3;
-	border: solid red 3px;
-	margin: 20px;
+	margin: 10px 0;
+	height: 80vh;
+
 }
 
 .shops {
 	flex: 2;
 	margin: 15px 25px;
-}*/
+}
 
 
 /***************************************
 FOOTER
 ****************************************/
-/*footer {
+footer {
 	display: flex;
+	flex-direction: column;
 	justify-content: space-around;
 	border-top: solid black 3px;
-
-}
-
-.contact {
-	display: flex;
 }
 
 .contact p {
-	margin: 16px 10px;
-}*/
+	font-size: 80%;
+}
+
+.legalese {
+	font-size: 50%;
+}
 
 
 
@@ -200,8 +207,6 @@ Media queries
 /*@media screen and (min-width: 1800px) {
 
 }*/
-
-
 
 
 
