--- a/style.css
+++ b/style.css
@@ -8,6 +8,13 @@ GENERAL
 	box-sizing: border-box;
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
+	text-align: justify;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%
 }
 
 
@@ -21,14 +28,10 @@ HEADER IMAGE
 header {
 	width: 100vw;
 	height: 100vh;
-	/*background-color: red;*/
-
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-
-
 	/***** PARALAX EFFECT *****/
 	background-image: url('assets/shop.jpg');
 	background-attachment: fixed;
@@ -36,8 +39,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
 }
-
-header .hdrtxt h1 {
+.hdrtxt h1 {
 	font-family: 'Shrikhand', cursive;
 	line-height: 1.3;
 	font-size: 300%;
@@ -45,18 +47,17 @@ header .hdrtxt h1 {
 	padding: 0 10%;
     color: #fff; 
     margin-bottom: 0;
-    background-color: #111;
+    background-color: rgba(0, 0, 0, 0.5);
 }
-header .hdrtxt p {
+.hdrtxt p {
 	font-family: 'Shrikhand', cursive;
 	/*font-size: 300%;*/
     color: #fff; 
     line-height: 1.3;
-    padding: 0 10% 10px;
+    padding: 10px 10%;
     margin-top: 15px;
     text-align: center;
-    background-color: #111;
-
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 
@@ -64,27 +65,34 @@ header .hdrtxt p {
 /***************************************
 NAV BAR
 ****************************************/
+nav {
+	background-color: #fff;
+}
 ul {
 	display: flex;
 	padding: 0;
 	margin-top: 0;
 }
-
-li {
+.btn {
 	list-style: none;
 	flex: 1;
 	text-align: center;
-	border: solid black 1.5px;
+	border: solid #111 1.5px;
 	padding: 15px;
-
 }
-
-nav ul li:hover {
+.btn:hover {
 	background-color: red;
 }
+.btn a {
+	font-size: 90%;
+	text-decoration: none;
+}
 
 
 
+/***************************************
+WRAPPER
+****************************************/
 .wrapper {
 	padding: 0 5%;
 	display: flex;
@@ -92,6 +100,20 @@ nav ul li:hover {
 	justify-content: center;
 	align-content: center;
 	width: 100vw;
+}
+
+
+
+/***************************************
+ABOUT 
+****************************************/
+.abttxt p {
+	text-align: justify;
+}
+#the_cook {
+	/*margin-top: 15px;*/
+	width: 100%;
+	box-shadow: 0px 2px 10px;
 
 }
 
@@ -99,71 +121,66 @@ nav ul li:hover {
 /***************************************
 PRODUCTS / SAUSAGES
 ****************************************/
-.products {
+#products {
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: column;	
 }
-
 .sausage {
 	display: flex;
 	flex-direction: column;
 }
-
-
 /****** ROUNDING PRODUCT IMAGES ******/
 .imgcrp {
 	width: 200px;
 	height: 200px;
-	
-
 	overflow: hidden;
 	border-radius: 100%;
 	margin: 20px;
 	box-shadow: 0px 2px 20px;
-	/*border: solid .5px white;*/
 	box-sizing: border-box;
 	align-self: center;
 }
-
 .imgcrp img {
 	display: inline;
     margin: 0 auto;
     height: 100%;
     width: auto;
 }
-
 .txt {
 	margin-top: 20px;
 	width: 90%;
 	align-self: center;
 }
-
 .txt h3 {
 	text-align: center;
 	margin-top: 0;
 }
 
+
+
 /***************************************
-CONTACT SECTION
+MAP / SHOPS
 ****************************************/
-.location {
+#location {
 	display: flex;
 	flex-direction: column;
 }
-
 #map {
 	display: flex;
 	flex: 3;
 	margin: 10px 0;
 	height: 80vh;
-
 }
-
 .shops {
 	flex: 2;
-	margin: 15px 25px;
+	margin: 15px 0px;
 }
+.logo {
+	width: 50%;
+	height: auto;
+}
+
 
 
 /***************************************
@@ -173,28 +190,26 @@ footer {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	border-top: solid black 3px;
+	border-top: solid #111 3px;
+	padding: 2px 5%;
 }
-
-.contact p {
+.contacts {
 	font-size: 80%;
-}
 
+}
 .legalese {
 	font-size: 50%;
+	align-self: center;
 }
-
 
 
 
 /*********************************
 Media queries
 **********************************/
-@media screen and (min-width: 600px) {
-.wrapper {
-	background-color: red;
-}
-}
+/*@media screen and (min-width: 600px) {
+
+}*/
 
 /*@media screen and (min-width: 900px) {
 
@@ -207,7 +222,6 @@ Media queries
 /*@media screen and (min-width: 1800px) {
 
 }*/
-
 
 
 
