--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 /***************************************
 GENERAL
 ****************************************/
@@ -9,16 +7,11 @@ GENERAL
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
 	text-align: justify;
+	line-height: 1.2;
 }
 
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%
-}
-
-.sticky + .content {
-  padding-top: 50px;
+.title {
+	margin-bottom: 0;
 }
 
 
@@ -79,6 +72,7 @@ ul {
 	padding: 0;
 	margin-top: 0;
 	margin-bottom: 0;
+	line-height: 1;
 }
 .btn {
 	list-style: none;
@@ -95,7 +89,16 @@ ul {
 	text-decoration: none;
 }
 
+/****** MAKING NAV STICKY ******/
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%
+}
 
+.sticky + .content {
+  padding-top: 50px;
+}
 
 /***************************************
 WRAPPER
@@ -184,10 +187,15 @@ MAP / SHOPS
 	margin: 15px 0px;
 }
 .logo {
-	width: 50%;
-	height: auto;
+	width: auto;
+  max-width: 150px;
+  height: auto;
+  max-height: 150px;
+	box-shadow: 0px 2px 10px black;
 }
-
+.top-address {
+	margin-top: 10px;
+}
 
 
 /***************************************
