--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ footer {
 	justify-content: space-around;
 	border-top: solid #111 3px;
 	padding: 2px 5%;
+	background-color: #F9F9F9;
 }
 .contacts {
 	font-size: 80%;
